--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@glidejs/glide": "^3.7.1",
+        "@headlessui/react": "^2.2.4",
+        "@heroicons/react": "^2.2.0",
+        "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
+        "swiper": "^11.2.8"
     }
 }
